13420
we know this is invalid statement because val is immuable, so += doesn't work.
```scala
val x = 1
x += 1
```

But the error given at runtime is mis leading to user:
```scala
scala> val x += 1
scala> x: Int = 1
scala> x += 1
scala> <console>:8: error: value += is not a member of Int
       x += 1
         ^
```
Can't we just say val is immutable and += can't be use?
